<?xml version="1.0"?>
<package format="3">
  <name>motor_control_system</name>
  <version>0.0.1</version>
  <description>Test motor control via ROS2 topic</description>

  <maintainer email="sen@ornek.com">Sen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
